# ecsact_codegen

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE.bazel  codegen_plugin.bzl  cog.toml
.github/workflows/: main.yml
ecsact/codegen/: plugin.h  plugin.hh
ecsact_codegen_plugin_validate/: BUILD.bazel  plugin_validate.cc
test/: BUILD.bazel  MODULE.bazel  mock_plugin.cc
tests/: BUILD.bazel
