load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "plugin_validate_headers",
    hdrs = [
        "ecsact/codegen/plugin_validate.hh",
    ],
)

cc_library(
    name = "plugin",
    hdrs = [
        "ecsact/codegen/plugin.h",
        "ecsact/codegen/plugin.hh",
    ],
    deps = [
        "@ecsact_runtime//:common",
    ],
)

alias(
    name = "plugin_validate",
    actual = "//ecsact_codegen_plugin_validate:lib",
)
