load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "lib",
    copts = copts,
    srcs = [
        "plugin_validate.cc",
    ],
    deps = [
        "//:plugin_validate_headers",
        "@boost.dll",
        "@ecsact_runtime//:meta",
        "@ecsact_runtime//:dylib",
    ],
)

cc_binary(
    name = "ecsact_codegen_plugin_validate",
    copts = copts,
    srcs = ["main.cc"],
    deps = [
        ":lib",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)
