load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//bazel:copts.bzl", "copts")
load("//:codegen_plugin.bzl", "ecsact_codegen_plugin")

cc_binary(
    name = "mock_plugin_bin",
    linkshared = True,
    copts = copts,
)

ecsact_codegen_plugin(
    name = "mock_plugin",
    output_extension = "mock.txt",
    plugin = ":mock_plugin_bin",
)

build_test(
    name = "mock_plugin_bin_build",
    targets = [
        ":mock_plugin_bin",
    ],
)
